Update v1.0 release post with a note about the penetration test

--- a/content/news/v1.0-released.md
+++ b/content/news/v1.0-released.md
@@ -4,9 +4,17 @@ date: 2016-09-04T11:40:17+02:00
 publishdate: 2016-09-04
 ---
 
-We're pleased to announce that **Padlock v1.0 has been
-released**! This is the biggest release yet, and apart from the usual bug
-fixes and polish we have a couple of neat additions for you.
+We're pleased to announce that **Padlock v1.0 has been released**! This is the
+biggest release yet, and apart from the usual bug fixes and polish we have a
+couple of neat additions for you (see below)! Most the changes, though, have
+been "under the hood" and even though they are not directly visible to most
+users they will bring great improvements in stability, reliability and
+security. Security, of course, has always been our main priority when building
+Padlock and we're happy to tell you that we have been working with the
+[Open Technology Fund](https://www.opentech.fund/) and the security experts at
+[cure53](https://cure53.de/) to identify and eliminate possible vulnerabilities
+and further strengthen the security of the app! We'll be releasing the full
+report soon so stay tuned!
 
 {{% note %}}
 **Important:** Along with the Padlock app, we have also made some significant
