Add gifs to v1.0 release article

--- a/content/news/v1.0-released.md
+++ b/content/news/v1.0-released.md
@@ -17,32 +17,39 @@ and further strengthen the security of the app! We'll be releasing the full
 report soon so stay tuned!
 
 {{% note %}}
-**Important:** Along with the Padlock app, we have also made some significant
-changes to the Padlock Cloud service. As a result, **older version of the Padlock
+**Important:** Along with this release, we're also rolling out a major update
+to the Padlock Cloud service. As a result, **older version of the Padlock
 app will no longer work with Padlock Cloud**! See our [announcement](#) for
 details.
 {{% /note %}}
 
 ## Auto Lock
 
+{{< figure src="/img/auto-lock.gif" alt="Auto Lock" class="float right" >}}
+
 Previously the iOS and Android versions of the app would lock instantly the
 moment you put the app in the background.  This proved to be a major
 inconvenience for many users since you had to re-enter your master password
-every time you switched apps in order to copy/paste user names and passwords
-into webpages or other applications. On the other hand, the desktop app did not
-have any form of auto-locking at all. With the latest release, both mobile and
-desktop apps now automatically detect they haven't received any input from the
-user in a while and **will automatically lock after a configurable period of
-inactivity**. This not only means that your data will be safe in case you forget
-to close the app on your computer or phone - copying and pasting will now also
-be a lot easier since the app will no longer lock instantly the moment you
-switch to another app.
+every time you switched apps in order to copy &amp; paste user names and
+passwords into webpages or other applications. On the other hand, the desktop
+app did not have any form of auto-locking at all. With the latest release, both
+mobile and desktop apps now automatically detect if they haven't received any
+input from the user in a while and **will automatically lock after a
+configurable period of inactivity**. This not only means that your data will be
+safe in case you forget to close the app on your computer or phone - copying
+and pasting will now also be a lot easier since the app will no longer lock
+instantly the moment you switch to another app.
 
 ## Improved Padlock Cloud Pairing Process
 
-We have put a lot of working into making pairing your devices with Padlock
-Cloud easier and more intuitive. At the same time, we have added features to
+We put a lot of working into making pairing your devices with Padlock
+Cloud easier and more intuitive. At the same time, we added some features to
 make the process more secure and give you more control over your data.
+
+{{< figure src="/img/pc-restore.gif" alt="Restore From Padlock Cloud" class="float left" >}}
+
+Among other things, you can now restore your Account directly from Padlock
+Cloud when starting the app on a new device!
 
 ## Custom Padlock Cloud Server
 
@@ -54,5 +61,5 @@ their data to a server they don't control. If you want to learn more about how
 you can spin up your own Padlock Cloud instance, head over to
 [Padlock Cloud on Github](https://github.com/maklesoft/padlock-cloud)!
 
-We hope you'll like the new version! If you have any feedback, questions or
+We hope you like the new version! If you have any feedback, questions or
 concerns, feel free to [shoot us an email](mailto:support@padlock.io)!
