Add new post about updating dropping padlock cloud support for < v1.0

--- a/content/news/v1.0-released.md
+++ b/content/news/v1.0-released.md
@@ -19,8 +19,8 @@ report soon so stay tuned!
 {{% note %}}
 **Important:** Along with this release, we're also rolling out a major update
 to the Padlock Cloud service. As a result, **older version of the Padlock
-app will no longer work with Padlock Cloud**! See our [announcement](#) for
-details.
+app will no longer work with Padlock Cloud**! See our
+[announcement]({{< relref "pc-update-required.md" >}}) for details.
 {{% /note %}}
 
 ## Auto Lock
