--- a/content/news/v2.0-released.md
+++ b/content/news/v2.0-released.md
@@ -1,7 +1,8 @@
 ---
 title: "Padlock v2.0 Released"
-date: 2017-08-30
-publishDate: 2017-08-30
+date: 2017-09-01
+publishDate: 2017-09-01
+weight: 1
 ---
 
 {{< figure src="/img/v2-list.png" alt="New Design" class="float right" >}}
