Fix typo in v2.2 article, add direct links to app stores

--- a/content/news/v2.2-released.md
+++ b/content/news/v2.2-released.md
@@ -24,12 +24,15 @@ accidentally exposing their data through this feature. If you would like to
 re-enable this feature, you can do so from the settings screen.
 
 We'd like to thank everyone who is helping to make Padlock better by providing
-value feedback or offering direct contributions! A special shout-out to Github
+feedback or offering direct contributions! A special shout-out to Github
 user [pwasiewicz](https://github.com/pwasiewicz) who helped fix various issues
 by contributing directly to our open source code base!
 
 The opinion of our users is immensely important to us. If you have any feedback
 or suggestions on how to improve Padlock, please don't hesitate to [shoot us an
 email](mailto:support@padlock.io)! Or maybe you think Padlock is perfect the
-way it is and want to help spread the word? Well, we're always happy to see
-positive reviews in the iOS, Android or ChromeOS app store!
+way it is and want to help spread the word? We'd really appreciate it if
+you could take a moment to rate the app in the app store on [iOS](https://itunes.apple.com/app/id871710139),
+[Android](https://play.google.com/store/apps/details?id=com.maklesoft.padlock),
+or
+[ChromeOS](https://chrome.google.com/webstore/detail/padlock/npkoefjfcjbknoeadfkbcdpbapaamcif)!
