Add v3 release article; archive most other articles

--- a/content/blog/v1.0-released.md
+++ b/content/blog/v1.0-released.md
@@ -2,6 +2,7 @@
 title: Padlock v1.0 Released
 date: 2016-09-08
 publishdate: 2016-09-08
+archived: true
 ---
 
 We're pleased to announce that **Padlock v1.0 has been released**! This is the
@@ -16,19 +17,19 @@ Padlock and we're happy to tell you that we have been working with the
 and further strengthen the security of the app! We'll be releasing the full
 report soon so stay tuned!
 
-{{% note %}}
+{{< note >}}
 **Important:** Along with this release, we're also rolling out a major update
 to the Padlock Cloud service. As a result, **older version of the Padlock
 app will no longer work with Padlock Cloud**! See our
 [announcement]({{< relref "pc-update-required.md" >}}) for details.
-{{% /note %}}
+{{< /note >}}
 
 ## Auto Lock
 
 {{< figure src="/img/auto-lock.gif" alt="Auto Lock" class="float right" >}}
 
 Previously the iOS and Android versions of the app would lock instantly the
-moment you put the app in the background.  This proved to be a major
+moment you put the app in the background. This proved to be a major
 inconvenience for many users since you had to re-enter your master password
 every time you switched apps in order to copy &amp; paste user names and
 passwords into webpages or other applications. On the other hand, the desktop
