--- a/content/blog/v1.1-released.md
+++ b/content/blog/v1.1-released.md
@@ -1,7 +1,8 @@
 ---
 date: 2016-11-03
 publishdate: 2016-11-03
-title: "Padlock v1.1 Released"
+title: 'Padlock v1.1 Released'
+archived: true
 ---
 
 Today we're releasing v1.1 of the Padlock app for Android, iOS and Google
