--- a/content/blog/v2.0-released.md
+++ b/content/blog/v2.0-released.md
@@ -1,8 +1,9 @@
 ---
-title: "Padlock v2.0 Released"
+title: 'Padlock v2.0 Released'
 date: 2017-09-01
 publishDate: 2017-09-01
 weight: 1
+archived: true
 ---
 
 {{< figure src="/img/v2-list.png" alt="New Design" class="float right" >}}
