--- a/content/blog/v2.1-released.md
+++ b/content/blog/v2.1-released.md
@@ -1,8 +1,9 @@
 ---
-title: "Releasing 2.1 And Padlock for Linux"
+title: 'Releasing 2.1 And Padlock for Linux'
 date: 2017-09-20T09:59:32+02:00
 publishDate: 2017-09-20
 weight: 1
+archived: true
 ---
 
 <iframe width="300" height="533" frameborder="0" allowfullscreen class="video float right"
@@ -21,6 +22,7 @@ the alphabetic sections from Padlock 1 that a lot of people where missing in
 overall smoother user experience.
 
 ## Padlock for Linux
+
 We love the open source community, and Linux is definitely a big part of it!
 While it's always been possible for Linux users to build and run the app from
 source, a lot of people have been waiting for a official build (we were quite
