--- a/content/blog/v2.2-released.md
+++ b/content/blog/v2.2-released.md
@@ -1,8 +1,9 @@
 ---
-title: "Padlock v2.2 Released"
+title: 'Padlock v2.2 Released'
 date: 2017-10-20
 publishDate: 2017-10-20
 weight: 1
+archived: true
 ---
 
 {{< figure src="/img/v2.2-record.png" alt="Masked Field" class="float right" >}}
@@ -12,7 +13,7 @@ version 2.2.0 addresses an issue that was brought up by many of our users. In
 previous versions field values in the record view would always be displayed
 openly without a way to hide sensitive values short of closing the record
 completely. This can be a problem when using Padlock in a public place where
-others might use the opportunity to catch a glimpse of your data. 
+others might use the opportunity to catch a glimpse of your data.
 
 Starting with this release, field values will be masked by default until
 explicitly revealed by the user. Values can still be copied to the clipboard with
