--- a/content/blog/v2.3-released.md
+++ b/content/blog/v2.3-released.md
@@ -1,8 +1,9 @@
 ---
-title: "Padlock v2.3 Released"
+title: 'Padlock v2.3 Released'
 date: 2017-11-07
 publishDate: 2017-11-07
 weight: 1
+archived: true
 ---
 
 **We're excited to announce the release of Padlock 2.3!** Continuing the theme
