--- a/content/blog/v2.4-released.md
+++ b/content/blog/v2.4-released.md
@@ -1,8 +1,9 @@
 ---
-title: "Padlock v2.4 Released"
+title: 'Padlock v2.4 Released'
 date: 2018-01-04
 publishDate: 2018-01-04
 weight: 1
+archived: true
 ---
 
 {{% note %}}
@@ -29,7 +30,6 @@ make the app look more consistent across different operating systems while
 still retaining the native look and feel on each platform. Padlock now also
 takes full advantage of the beautiful screen on the iPhone X!
 
-
 ## Improved Setup Process
 
 {{< figure src="/img/v2.4-setup-iphonex.png" alt="v2.4 Setup Process on iPhone X" class="float right iphonex" >}}
@@ -52,4 +52,3 @@ you could take a moment to rate the app in the app store on [iOS](https://itunes
 [Android](https://play.google.com/store/apps/details?id=com.maklesoft.padlock),
 or
 [ChromeOS](https://chrome.google.com/webstore/detail/padlock/npkoefjfcjbknoeadfkbcdpbapaamcif)!
-
