--- a/content/blog/v2.5-released.md
+++ b/content/blog/v2.5-released.md
@@ -1,8 +1,9 @@
 ---
-title: "Padlock v2.5 Released"
+title: 'Padlock v2.5 Released'
 date: 2018-03-01
 publishDate: 2018-03-01
 weight: 1
+archived: true
 ---
 
 We're happy to announce another incremental update! Apart from the usual bug
