--- a/content/blog/v2.6-released.md
+++ b/content/blog/v2.6-released.md
@@ -1,8 +1,9 @@
 ---
-title: "Padlock v2.6 Released"
+title: 'Padlock v2.6 Released'
 date: 2018-04-01
 publishDate: 2018-04-01
 weight: 1
+archived: true
 ---
 
 **Padlock 2.6 is out, and it's one of the biggest updates yet!** The main goal
@@ -22,7 +23,6 @@ provides a clearer, more transparent way of navigating the app. We're far from
 done though! Stay tuned for more improvements like better accessibility and
 productivity-boosting keyboard shortcuts!
 
-
 ## Improved Cloud Integration
 
 Being able to easily share your data between all your devices is one of the
@@ -32,7 +32,6 @@ which is why we are continuously working on improving the way you access
 your online data from within the app. Padlock 2.6 introduces a number of
 significant improvements in this area, like an improved pairing process,
 the ability to manage your account directly from with the app and more!
-
 
 ## Auto Updates For Linux
 
