--- a/content/blog/v2.7-released.md
+++ b/content/blog/v2.7-released.md
@@ -1,8 +1,9 @@
 ---
-title: "Padlock v2.7 Released"
+title: 'Padlock v2.7 Released'
 date: 2018-05-10
 publishDate: 2018-05-10
 weight: 1
+archived: true
 ---
 
 **It's time for another update!** Apart from the usual bug fixes and tweaks,
@@ -55,7 +56,7 @@ philosophy of minimalist design and 'security through simplicity', we find it
 necessary to reevaluate and if necessary remove existing features.
 
 Previous versions of the desktop version allowed to quickly reveal a fields
-value within the list view by moving the mouse over it.  While this was a nice
+value within the list view by moving the mouse over it. While this was a nice
 little gimmick, it turned out that in practice it was not actually that useful.
 In fact, many users felt that the feature was sacrificing security by causing
 them to inadvertently reveal possibly sensitive information while they were
